<resources>
    <string name="app_name">Two Activities</string>
    <string name="second_activity">Second Activity</string>
    <string name="message_received">Message Received</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="reply">Reply</string>
    <string name="send">Send</string>
    <string name="reply_received">Reply Received</string>
</resources>
