<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/reply_received"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:id="@+id/tv_text_header_reply"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reply"
            android:visibility="invisible"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_header_reply"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:onClick="launchSecondActivity"
            android:id="@+id/btn_main_reply" app:layout_constraintStart_toEndOf="@+id/et_main_reply"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/et_main_reply" app:layout_constraintEnd_toStartOf="@+id/btn_main_reply"
            android:layout_marginEnd="8dp" android:inputType="textLongMessage"
            android:hint="@string/enter_your_message_here"/>
</android.support.constraint.ConstraintLayout>